Add GUID and alias for Apple APFS partition

PR:		225813
Submitted by:	James Wright <james.wright AT jigsawdezign.com>