sys/geom/part/g_part.h
@@ -38,6 +38,7 @@
 #define	G_PART_PROBE_PRI_HIGH	0
 
 enum g_part_alias {
+	G_PART_ALIAS_APPLE_APFS,	/* An Apple APFS partition. */
 	G_PART_ALIAS_APPLE_BOOT,	/* An Apple boot partition entry. */
 	G_PART_ALIAS_APPLE_CORE_STORAGE,/* An Apple Core Storage partition. */
 	G_PART_ALIAS_APPLE_HFS,		/* An HFS+ file system entry. */
